--- a/Process_Notebook_Yunshuo.ipynb
+++ b/Process_Notebook_Yunshuo.ipynb
@@ -148,8 +148,7 @@
     "from __future__ import print_function\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import plotly.io as pio\n",
-    "import cufflinks as cf"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -161,6 +160,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f709458",
+   "metadata": {},
+   "source": [
+    "Import the datasets that are used to analyze, which are Participant-03.csv, Participant-01.csv and Participant-07.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f7d28ada",
@@ -169,14 +176,6 @@
    "source": [
     "pio.renderers\n",
     "pio.renderers.default = \"svg\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f709458",
-   "metadata": {},
-   "source": [
-    "Import the datasets that are used to analyze, which are Participant-03.csv, Participant-01.csv and Participant-07.csv"
    ]
   },
   {
@@ -1851,15 +1850,13 @@
    "id": "75c9bb90",
    "metadata": {},
    "source": [
-    "After rounding the data to one decimal place, the data is cleaner and more organized.\n",
-    "\n",
-    "Import cufflinks and set the theme to 'pearl'"
+    "After rounding the data to one decimal place, the data is cleaner and more organized."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b756a7e",
+   "id": "e6cc4620",
    "metadata": {},
    "outputs": [],
    "source": [
